[package]
name = "dijon_test_app"
version = "0.1.0"
authors = ["Dylan Cullinane <dcullina@ucsd.edu>"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
mpu6050 = "0.1.6"
panic-probe = { version = "0.3.2", features = ["defmt"] }
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f411", "rtic1", "defmt", "usb_fs"]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[patch.crates-io]
mpu6050 = { path = "./src/mpu6050" }

[profile.release]
codegen-units = 1
incremental = false
debug = false
lto = true
opt-level = "s"
