[package]
name = "stm32_rtic_test_app"
version = "0.1.0"
authors = ["Dylan Cullinane <dcullina@ucsd.edu>"]
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
defmt = "0.3.10"
mpu6050 = "0.1.6"
panic-probe = "0.3.2"
rtic = "2.1.2"
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[dependencies.stm32f4xx-hal]
version = "0.22.1"
features = ["stm32f411", "rtic2", "defmt", "usb_fs"]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = false
lto = true
opt-level = "s"
