[package]
name = "stm32_rtic_test_app"
version = "0.1.0"
authors = ["Dylan Cullinane <dylanjcullinane@icloud.com>"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = [ "critical-section-single-core" ]}
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
mpu6050 = "0.1.6"
panic-probe = "0.3.2"
rtic = "2.1.2"
stm32-usbd = "0.7.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[dependencies.stm32f4xx-hal]
version = "0.22.1"
features = ["stm32f411", "rtic2", "defmt", "usb_fs"]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = false
lto = true
opt-level = "s"

[package.metadata.cargo-embed]
linker_script = "memory.x"
